fix editor height and menu on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -237,6 +237,8 @@ input {
   display: flex;
   flex-direction: column;
 
+  max-width: 100%;
+
   .ntr-menu-item {
     flex: 1 0 auto;
   }
@@ -263,6 +265,4 @@ input {
 }
 
 .inline-container {
-  width: 100%;
-  height: 100%;
 }
