--- a/src/ui/toolbar/main/Toolbar.scss
+++ b/src/ui/toolbar/main/Toolbar.scss
@@ -14,6 +14,7 @@
 
   .layout {
     display: flex;
+    flex-flow: wrap;
 
     gap: 4px;
     align-items: center;
